EPUB: Fix reported layout issues
- Don't allow sections to override position
- Follow Readium's lead by scaling media max sizes by 98%. Imprecise,
  but it actually works to prevent an inline <a> wrapping an <img> from
  causing overflow.

https://forums.zotero.org/discussion/121091/missing-pages-in-epub-in-zotero-reader

--- a/src/dom/epub/stylesheets/layout/_paginated.scss
+++ b/src/dom/epub/stylesheets/layout/_paginated.scss
@@ -88,14 +88,18 @@
 }
 
 replaced-body {
+	section {
+		position: relative !important;
+	}
+
 	section + section {
 		// It's like break-after, but Firefox supports it
 		margin-block-start: 100vh;
 	}
 
 	img, svg, audio, video {
-		max-width: var(--media-max-width) !important;
-		max-height: calc(100vh - 80px) !important;
+		max-width: calc(0.98 * var(--media-max-width)) !important;
+		max-height: calc(0.98 * (100vh - 80px)) !important;
 		object-fit: contain;
 		position: static !important;
 		width: auto;
